# FoxCull

./: .gitignore  .rca-live-scrub.md  BACKLOG.md  CLAUDE.md  CLAUDE_CODE_HANDOVER.md  README.md  RELEASE_NOTES.md  STORAGE.md  package-lock.json  package.json  vite.config.js
.github/workflows/: check.yml  release.yml
docs/: AUDIT-2026-07.md  DECISIONS.md  HANDOFF-FROM-FABLE-AUDIT.md  HANDOVER-2026-07-22-cast-broken.md  INSTAGRAM_EXPORT_PLAYBOOK.md  PROJECT-LOG.md  ROADMAP.md  UX-AUDIT-2026-07-19.md  cinematic-site.css  icon-options.html  index.html  site-data.js
docs/changes/: 2026-07-19-video-rework-ux-looks.md  2026-07-20-heic-delete-cast.md  2026-07-20-live-scrub-fix.md  2026-07-20-video-transport-poster.md  2026-07-21-scrub-audit-delete-undo.md  2026-07-21-sprite-unification-fullscreen-docks.md  2026-07-21-webcodecs-probe.md  2026-07-21-webcodecs-scrub-engine.md  2026-07-22-cast-session-rca.md  2026-07-22-controller-remap-trim-cast-transport.md  2026-07-22-edit-mode-fanout.md  2026-07-22-glimpse-grid-decode-polish.md  2026-07-22-glimpse-speed-grid-decoder-docs.md  2026-07-22-stage-freeze-rca.md  2026-07-23-cast-controller-seek.md  2026-07-24-cast-tv-authority-controls.md
docs/design/: libmpv-transplant.md  precache-policy.md  video-player-migration.md
scripts/: make-icon.mjs  one-time-library-reset.ps1  verify-windows-runtime.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cast.rs  catalog.rs  commands.rs  lib.rs  log.rs  main.rs  mpv.rs  raw.rs  video.rs
src/lib/: activity.svelte.ts  api.ts  cast.ts  gamepad.svelte.ts  mp4box.d.ts  persist.ts  scrub-engine.ts  scrub-probe.ts  settings.svelte.ts  thumbnail-loader.ts  types.ts
src/lib/components/: ActivityBar.svelte  ControllerPanel.svelte  DetailsView.svelte  EditStudio.svelte  Loupe.svelte  SectionedGrid.svelte  Thumb.svelte  TreeNode.svelte  VirtualGrid.svelte  VirtualStrip.svelte
src/routes/: +page.svelte
