[package]
name = "foxcull"
version = "1.0.1"
description = "Photo/video culling and lightweight editing tool"
authors = ["FoxCull contributors"]
edition = "2021"

[lib]
name = "foxcull_codex_lib"
# Desktop-only app: the binary links the lib as an rlib. The `staticlib`/`cdylib`
# types are only for the (unused) mobile targets, and the cdylib's auto-exported
# symbol table (~165k) blows past GNU ld's 65k DLL export-ordinal limit, which is
# why `tauri dev` never linked on the local windows-gnu toolchain. Dropping them
# lets the local build link; desktop CI (MSVC) is unaffected — it builds the bin.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` lets us serve cached thumbnails + originals to the webview
# via convertFileSrc; `devtools` keeps F12 inspect available in release.
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Culling catalog (ratings/labels/reject flags). Bundled SQLite — no system dep.
rusqlite = { version = "0.32", features = ["bundled"] }

# Thumbnail decode/resize/encode. Default features cover jpeg/png/tiff/webp.
image = "0.25"
# Direct JPEG decoder with DCT-scaled (1/2, 1/4, 1/8) decoding — the perf
# centerpiece: a 50MP phone JPEG decoded at 1/8 does ~64x less IDCT work, so
# grid thumbnails on the user's Samsung library go from ~120ms to a few ms.
jpeg-decoder = "0.3"
# EXIF orientation (works on JPEG and TIFF-based RAW like NEF).
kamadak-exif = "0.5"
# Move rejected files to the OS Recycle Bin / Trash instead of hard-deleting.
trash = "5"
# Stamp exported JPEGs with their capture date (std can't set mtimes).
filetime = "0.2"
# Parallel background thumbnail warming across all cores on folder open.
rayon = "1"

parking_lot = "0.12"

# Runtime-load libmpv (the mpv engine) for the experimental native video player
# (docs/design/libmpv-transplant.md). Loaded via dlopen, NOT linked at build
# time, so a missing dll just disables the feature — the normal build/CI gains
# no dependency on mpv.
libloading = "0.8"

# ── Cast to TV (src/cast.rs) — all three deliberately C-toolchain-free ──────
# mDNS discovery of Google Cast devices (pure Rust).
mdns-sd = "0.20"
# Local Range-enabled media server the TV fetches originals from (pure Rust;
# no TLS feature — the receiver talks plain HTTP to us on the LAN).
tiny_http = "0.12"
# TLS channel for the CASTV2 control connection (port 8009, self-signed cert).
# Uses the OS stack: schannel on Windows, Security.framework on macOS — chosen
# over rustls because rustls' crypto backends (aws-lc-rs/ring) need a C
# toolchain, which the local gnu check setup doesn't have.
native-tls = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
# thin LTO + codegen-units=16: full LTO OOMs rustc on the dev host (see the
# workspace CLAUDE.md). Don't tighten without confirming 16+ GB RAM.
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true

# The shipped build is opt-level="s" (size) everywhere EXCEPT the image-decode
# hot path — those crates get full speed optimization so thumbnail/preview decode
# is as fast in the release binary as it is in dev. Mirrors the dev overrides.
[profile.release.package.image]
opt-level = 3
[profile.release.package.jpeg-decoder]
opt-level = 3
[profile.release.package.zune-jpeg]
opt-level = 3
[profile.release.package.zune-core]
opt-level = 3
[profile.release.package.png]
opt-level = 3

# `tauri dev` builds Rust unoptimized, which makes image decode/resize 30-50x
# slower (~5.7s per 12MP thumbnail observed). Optimize ONLY the image-decoding
# crates in dev so thumbnails are fast while our own code stays debuggable.
# Targeted (not "*") to avoid recompiling the heavy SQLite/Tauri C builds.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.jpeg-decoder]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.exr]
opt-level = 3
